--- a/ggb/examples/example-api.html
+++ b/ggb/examples/example-api.html
@@ -18,7 +18,7 @@
                 var parameters = {"prerelease":false,"width":600,"height":450,"showToolBar":false,"borderColor":null,"showMenuBar":false,"showAlgebraInput":false,
 				"showResetIcon":true,"enableLabelDrags":false,"enableShiftDragZoom":true,"enableRightClick":false,"capturingThreshold":null,"showToolBarHelp":false,
 				"errorDialogsActive":true,"useBrowserForJS":false,
-				"filename":"../ggb/triangle.ggb"};
+				"filename":"triangle.ggb"};
 
                 var applet = new GGBApplet('5.0', parameters);
               
