--- a/ggb/examples/example-multiple.html
+++ b/ggb/examples/example-multiple.html
@@ -23,7 +23,7 @@
     //  applet1.setHTML5Codebase('GeoGebra/HTML5/5.0/web/');
 	// Create applet for file ../ggb/sine-curves.ggb
     // The second parameter forces not to use webSimple (this is necessary when multiple applets are used on one page, if one cannot use webSimple).
-    var applet2 = new GGBApplet({filename: "../ggb/sine-curves.ggb","showtoolbar":true}, true);
+    var applet2 = new GGBApplet({filename: "sine-curves.ggb","showtoolbar":true}, true);
 
     //  when used with Math Apps Bundle, uncomment this:
     //  applet2.setHTML5Codebase('GeoGebra/HTML5/5.0/web/');
