--- a/ggb/index.html
+++ b/ggb/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <p>j</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quas repellat iusto officiis dolor. Eveniet qui vitae sunt at perferendis repellendus eligendi id placeat rem quod, maxime tenetur porro deserunt.</p>
 </body>
 </html>
