--- a/ggb/template.html
+++ b/ggb/template.html
@@ -619,7 +619,7 @@
         // var applet1 = new GGBApplet(parameters, '5.0', 'applet_container');
         function createApplet(filename,params){
             var applet = new GGBApplet({filename: "test1.ggb",...params}, true);
-            
+            return applet;
         }
         // var applet2 = new GGBApplet({filename: "test1.ggb","showtoolbar":false}, true);
       //  when used with Math Apps Bundle, uncomment this:
@@ -632,10 +632,8 @@
         }
 </script>
 
-<body class="typora-export"><div class="typora-export-content">
-    <div id="write" class=""><h1 id="负"><span>负</span></h1><p><span>你好</span></p><figure><table><thead><tr><th><span>4</span></th><th><span>4</span></th><th>&nbsp;</th></tr></thead><tbody><tr><td>&nbsp;</td><td><span>3</span></td><td>&nbsp;</td></tr><tr><td>&nbsp;</td><td><span>3</span></td><td>&nbsp;</td></tr><tr><td>&nbsp;</td><td><span>3</span></td><td><span>3</span></td></tr></tbody></table></figure><p>&nbsp;</p></div></div>
-    
-    </body>
+
+
 <div id="applet_container2"></div>
 
 </body>
