--- a/ggb/essays/template.html
+++ b/ggb/essays/template.html
@@ -5,9 +5,9 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>My first ggb app</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link href="https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel='stylesheet' type='text/css' media='screen' href='../src/main.css'>
         <script type="text/javascript" src="https://www.geogebra.org/apps/deployggb.js"></script>
-
     </head>
     <body>
         <script type="text/javascript">
