--- a/ggb/index.html
+++ b/ggb/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='./src/main.css'>
+
 </head>
+
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quas repellat iusto officiis dolor. Eveniet qui vitae sunt at perferendis repellendus eligendi id placeat rem quod, maxime tenetur porro deserunt.</p>
+    <div class="typora-export-content">
+        <div id="write" class="">
+            <h1 id="ggb内嵌网页辅助"><span>GGB内嵌网页辅助</span></h1>
+            <p><span>你好！</span></p>
+            <a href="./essays/template.html">示例代码</a>
+        </div>
+    </div>
 </body>
+
 </html>
